--- a/package.json
+++ b/package.json
@@ -6,13 +6,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sls": "sls"
+    "sls": "sls",
+    "exportEnv": "sls export-env",
+    "integration-test": "jest --verbose ./__tests__/test_cases/integration"
   },
   "keywords": [],
   "author": "Binh Ngo",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "aws-sdk": "^2.1392.0",
+    "dotenv": "^16.1.4",
+    "jest": "^29.5.0",
     "serverless": "2.4.0",
-    "serverless-appsync-plugin": "^1.4.0"
+    "serverless-appsync-plugin": "^1.4.0",
+    "serverless-export-env": "^2.2.0",
+    "serverless-iam-roles-per-function": "^3.2.0"
+  },
+  "dependencies": {
+    "chance": "^1.1.11"
   }
 }
