--- a/serverless.yml
+++ b/serverless.yml
@@ -3,11 +3,18 @@ frameworkVersion: '2'
 
 plugins:
   - serverless-appsync-plugin
+  - serverless-iam-roles-per-function
+  - serverless-export-env
 
+# Any environment variables provided under provider will be applied to all functions
 provider:
   name: aws
+  # runtime of node 12 isnt supported anymore. they recommend 18
   runtime: nodejs12.x
   region: us-east-1
+  environment:
+    STAGE: ${self:custom.stage}
+    AWS_NODEJS_CONNECTION_REUSE_ENABLED: "1"
 
 package:
   exclude:
@@ -15,11 +22,39 @@ package:
     - package.json
 
 custom:
+  region: ${opt:region, self:provider.region}
+  stage: ${opt:stage, self:provider.stage}
   appSync:
     - ${file(serverless.appsync-api.yml)}
 
+functions: 
+  confirmUserSignup:
+    handler: functions/confirm-user-signup.handler
+    environment: 
+      USERS_TABLE: !Ref UsersTable
+    iamRoleStatements:
+      - Effect: Allow
+        Action: dynamodb:PutItem
+        Resource: !GetAtt UsersTable.Arn
+
 resources:
   Resources:
+    UsersTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        BillingMode: PAY_PER_REQUEST
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        Tags:
+          - Key: Environment
+            Value: ${self:custom.stage}
+          - Key: Name
+            Value: users-table
+
     CognitoUserPool:
       Type: AWS::Cognito::UserPool
       Properties:
@@ -39,7 +74,17 @@ resources:
             Name: name
             Required: false
             Mutable: true
-
+        LambdaConfig:
+          PostConfirmation: !GetAtt ConfirmUserSignupLambdaFunction.Arn
+          
+    UserPoolInvokeConfirmUserSignupLambdaPermission: 
+      Type: AWS::Lambda::Permission
+      Properties:
+        Action: lambda:invokeFunction
+        FunctionName: !Ref ConfirmUserSignupLambdaFunction
+        Principal: cognito-idp.amazonaws.com
+        SourceArn: !GetAtt CognitoUserPool.Arn
+# create Cognito User Pool Client
     WebUserPoolClient:
       Type: AWS::Cognito::UserPoolClient
       Properties:
@@ -52,5 +97,8 @@ resources:
         PreventUserExistenceErrors: ENABLED
 
   Outputs:
+    AwsRegion:	
+      Value: ${self:custom.region}
+
     CognitoUserPoolId:
       Value: !Ref CognitoUserPool
