--- a/package.json
+++ b/package.json
@@ -5,25 +5,25 @@
   "description": "Backend for the AppSync Masterclass demo app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "sls": "sls",
     "exportEnv": "sls export-env",
-    "integration-test": "jest --verbose ./__tests__/test_cases/integration"
+    "integration-test": "jest --verbose ./__tests__/test_cases/integration",
+    "e2e-test": "jest --verbose ./__tests__/test_cases/e2e"
   },
   "keywords": [],
-  "author": "Binh Ngo",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.2",
-    "aws-sdk": "^2.1392.0",
-    "dotenv": "^16.1.4",
-    "jest": "^29.5.0",
+    "@types/jest": "^26.0.15",
+    "aws-sdk": "^2.778.0",
+    "dotenv": "^8.2.0",
+    "jest": "^26.6.1",
     "serverless": "2.4.0",
     "serverless-appsync-plugin": "^1.4.0",
-    "serverless-export-env": "^2.2.0",
-    "serverless-iam-roles-per-function": "^3.2.0"
+    "serverless-export-env": "^1.4.0",
+    "serverless-iam-roles-per-function": "^2.0.2"
   },
   "dependencies": {
-    "chance": "^1.1.11"
+    "chance": "^1.1.7"
   }
 }
