--- a/serverless.yml
+++ b/serverless.yml
@@ -6,10 +6,8 @@ plugins:
   - serverless-iam-roles-per-function
   - serverless-export-env
 
-# Any environment variables provided under provider will be applied to all functions
 provider:
   name: aws
-  # runtime of node 12 isnt supported anymore. they recommend 18
   runtime: nodejs12.x
   region: us-east-1
   environment:
@@ -27,10 +25,10 @@ custom:
   appSync:
     - ${file(serverless.appsync-api.yml)}
 
-functions: 
+functions:
   confirmUserSignup:
     handler: functions/confirm-user-signup.handler
-    environment: 
+    environment:
       USERS_TABLE: !Ref UsersTable
     iamRoleStatements:
       - Effect: Allow
@@ -76,15 +74,15 @@ resources:
             Mutable: true
         LambdaConfig:
           PostConfirmation: !GetAtt ConfirmUserSignupLambdaFunction.Arn
-          
-    UserPoolInvokeConfirmUserSignupLambdaPermission: 
+
+    UserPoolInvokeConfirmUserSignupLambdaPermission:
       Type: AWS::Lambda::Permission
       Properties:
         Action: lambda:invokeFunction
         FunctionName: !Ref ConfirmUserSignupLambdaFunction
         Principal: cognito-idp.amazonaws.com
         SourceArn: !GetAtt CognitoUserPool.Arn
-# create Cognito User Pool Client
+
     WebUserPoolClient:
       Type: AWS::Cognito::UserPoolClient
       Properties:
@@ -97,8 +95,11 @@ resources:
         PreventUserExistenceErrors: ENABLED
 
   Outputs:
-    AwsRegion:	
+    AwsRegion:
       Value: ${self:custom.region}
 
     CognitoUserPoolId:
       Value: !Ref CognitoUserPool
+
+    WebCognitoUserPoolClientId:
+      Value: !Ref WebUserPoolClient
