created unit test and e2e test

--- a/serverless.appsync-api.yml
+++ b/serverless.appsync-api.yml
@@ -5,3 +5,21 @@ userPoolConfig:
   awsRegion: us-east-1
   defaultAction: ALLOW
   userPoolId: !Ref CognitoUserPool
+mappingTemplatesLocation: mapping-templates
+mappingTemplates: 
+  - type: Query 
+    field: getMyProfile
+    dataSource: usersTable
+    # since we follow the proper naming convention for the mapping templates,
+    # the request and response parameters aren't required
+  
+    # request: Query.getMyProfile.request.vtl
+    # response: Query.getMyProfile.response.vtl
+
+dataSources:
+  - type: NONE
+    name: none
+  - type: AMAZON_DYNAMODB
+    name: usersTable
+    config:
+      tableName: !Ref UsersTable
