--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "sls": "sls",
     "exportEnv": "sls export-env",
+    "test": "jest --verbose ./__tests__/test_cases/unit",
     "integration-test": "jest --verbose ./__tests__/test_cases/integration",
     "e2e-test": "jest --verbose ./__tests__/test_cases/e2e"
   },
@@ -15,6 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "amplify-appsync-simulator": "^2.4.1",
+    "amplify-velocity-template": "^1.4.11",
     "aws-sdk": "^2.778.0",
     "dotenv": "^8.2.0",
     "jest": "^26.6.1",
