--- a/serverless.appsync-api.yml
+++ b/serverless.appsync-api.yml
@@ -15,6 +15,12 @@ mappingTemplates:
   
     # request: Query.getMyProfile.request.vtl
     # response: Query.getMyProfile.response.vtl
+  - type: Query
+    field: getImageUploadUrl
+    dataSource: getImageUploadUrlFunction
+    request: false
+    response: false
+
   - type: Mutation
     field: editMyProfile
     dataSource: usersTable
@@ -26,3 +32,7 @@ dataSources:
     name: usersTable
     config:
       tableName: !Ref UsersTable
+  - type: AWS_LAMBDA
+    name: getImageUploadUrlFunction
+    config:
+      functionName: getImageUploadUrl
