--- a/serverless.yml
+++ b/serverless.yml
@@ -9,7 +9,7 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs18.x
   region: us-east-1
   environment:
     STAGE: ${self:custom.stage}
@@ -41,6 +41,19 @@ functions:
       - Effect: Allow
         Action: dynamodb:PutItem
         Resource: !GetAtt UsersTable.Arn
+  
+  getImageUploadUrl:
+    handler: functions/get-upload-url.handler
+    environment:
+      BUCKET_NAME: !Ref AssetsBucket
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - s3:PutObject
+          # required because we set the ACL to public read
+          # in get-upload-url.js
+          - s3:PutObjectAcl
+        Resource: !Sub ${AssetsBucket.Arn}/*
 
 resources:
   Resources:
@@ -100,6 +113,22 @@ resources:
           - ALLOW_USER_PASSWORD_AUTH
           - ALLOW_REFRESH_TOKEN_AUTH
         PreventUserExistenceErrors: ENABLED
+
+    AssetsBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        AccelerateConfiguration:
+          AccelerationStatus: Enabled
+        CorsConfiguration:
+          CorsRules:
+            - AllowedMethods:
+                - GET
+                - PUT
+              AllowedOrigins:
+              # change this to website domain
+                - '*'
+              AllowedHeaders:
+                - '*'
 
   Outputs:
     AwsRegion:
