--- a/serverless.appsync-api.yml
+++ b/serverless.appsync-api.yml
@@ -25,6 +25,12 @@ mappingTemplates:
     field: editMyProfile
     dataSource: usersTable
 
+  - type: Mutation
+    field: tweet
+    dataSource: tweetFunction
+    request: false
+    response: false
+
 dataSources:
   - type: NONE
     name: none
@@ -36,3 +42,7 @@ dataSources:
     name: getImageUploadUrlFunction
     config:
       functionName: getImageUploadUrl
+  - type: AWS_LAMBDA
+    name: tweetFunction
+    config:
+      functionName: tweet
