--- a/serverless.yml
+++ b/serverless.yml
@@ -9,7 +9,7 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs18.x
   region: us-east-1
   environment:
     STAGE: ${self:custom.stage}
@@ -41,7 +41,7 @@ functions:
       - Effect: Allow
         Action: dynamodb:PutItem
         Resource: !GetAtt UsersTable.Arn
-  
+
   getImageUploadUrl:
     handler: functions/get-upload-url.handler
     environment:
@@ -50,10 +50,24 @@ functions:
       - Effect: Allow
         Action:
           - s3:PutObject
-          # required because we set the ACL to public read
-          # in get-upload-url.js
           - s3:PutObjectAcl
         Resource: !Sub ${AssetsBucket.Arn}/*
+
+  tweet:
+    handler: functions/tweet.handler
+    environment:
+      USERS_TABLE_NAME: !Ref UsersTable
+      TWEETS_TABLE_NAME: !Ref TweetsTable
+      TIMELINES_TABLE_NAME: !Ref TimelinesTable
+    iamRoleStatements:
+      - Effect: Allow
+        Action: dynamodb:UpdateItem
+        Resource: !GetAtt UsersTable.Arn
+      - Effect: Allow
+        Action: dynamodb:PutItem
+        Resource:
+          - !GetAtt TweetsTable.Arn
+          - !GetAtt TimelinesTable.Arn
 
 resources:
   Resources:
@@ -73,6 +87,53 @@ resources:
           - Key: Name
             Value: users-table
 
+    TweetsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        BillingMode: PAY_PER_REQUEST
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+          - AttributeName: creator
+            AttributeType: S
+        GlobalSecondaryIndexes:
+          - IndexName: byCreator
+            KeySchema:
+              - AttributeName: creator
+                KeyType: HASH
+              - AttributeName: id
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL
+        Tags:
+          - Key: Environment
+            Value: ${self:custom.stage}
+          - Key: Name
+            Value: tweets-table
+
+    TimelinesTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        BillingMode: PAY_PER_REQUEST
+        KeySchema:
+          - AttributeName: userId
+            KeyType: HASH
+          - AttributeName: tweetId
+            KeyType: RANGE
+        AttributeDefinitions:
+          - AttributeName: userId
+            AttributeType: S
+          - AttributeName: tweetId
+            AttributeType: S
+        Tags:
+          - Key: Environment
+            Value: ${self:custom.stage}
+          - Key: Name
+            Value: timelines-table
+            
     CognitoUserPool:
       Type: AWS::Cognito::UserPool
       Properties:
@@ -125,7 +186,6 @@ resources:
                 - GET
                 - PUT
               AllowedOrigins:
-              # change this to website domain
                 - '*'
               AllowedHeaders:
                 - '*'
