created tweet integration test

--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ COGNITO_USER_POOL_ID=us-east-1_JQl9Sq0OQ
 WEB_COGNITO_USER_POOL_CLIENT_ID=6us7fssbjrfvqcdvq9a8hn6eep
 USERS_TABLE=appsyncmasterclass-backend-dev-UsersTable-W2NE4J8VOM1G
 BUCKET_NAME=appsyncmasterclass-backend-dev-assetsbucket-1w3tvkdnffaak
+TWEETS_TABLE=appsyncmasterclass-backend-dev-TweetsTable-1ML4C9JEJ5SSV
+TIMELINES_TABLE=appsyncmasterclass-backend-dev-TimelinesTable-17UGQXBOFBTXY
 API_URL=https://j7f24l2q4vbtjaz5odjtey6ttm.appsync-api.us-east-1.amazonaws.com/graphql
