--- a/serverless.appsync-api.yml
+++ b/serverless.appsync-api.yml
@@ -20,16 +20,23 @@ mappingTemplates:
     dataSource: getImageUploadUrlFunction
     request: false
     response: false
+  - type: Query
+    field: getTweets
+    dataSource: tweetsTable
 
   - type: Mutation
     field: editMyProfile
     dataSource: usersTable
-
   - type: Mutation
     field: tweet
     dataSource: tweetFunction
     request: false
     response: false
+
+  # NESTED FIELDS
+  - type: Tweet
+    field: profile
+    dataSource: usersTable
 
 dataSources:
   - type: NONE
@@ -38,6 +45,10 @@ dataSources:
     name: usersTable
     config:
       tableName: !Ref UsersTable
+  - type: AMAZON_DYNAMODB
+    name: tweetsTable
+    config:
+      tableName: !Ref TweetsTable
   - type: AWS_LAMBDA
     name: getImageUploadUrlFunction
     config:
