implemented getMyTimeline query on AppSync

--- a/serverless.appsync-api.yml
+++ b/serverless.appsync-api.yml
@@ -23,6 +23,9 @@ mappingTemplates:
   - type: Query
     field: getTweets
     dataSource: tweetsTable
+  - type: Query
+    field: getMyTimeline
+    dataSource: timelinesTable
 
   - type: Mutation
     field: editMyProfile
@@ -37,6 +40,9 @@ mappingTemplates:
   - type: Tweet
     field: profile
     dataSource: usersTable
+  - type: TimelinePage
+    field: tweets
+    dataSource: tweetsTable
 
 dataSources:
   - type: NONE
@@ -49,6 +55,10 @@ dataSources:
     name: tweetsTable
     config:
       tableName: !Ref TweetsTable
+  - type: AMAZON_DYNAMODB
+    name: timelinesTable
+    config:
+      tableName: !Ref TimelinesTable
   - type: AWS_LAMBDA
     name: getImageUploadUrlFunction
     config:
@@ -57,3 +67,7 @@ dataSources:
     name: tweetFunction
     config:
       functionName: tweet
+
+# Appsync plugin is able to pass the {TweetsTable} argument into the TimelinePage.tweets.request.vtl and extract the actual TweetsTable name
+substitutions:
+  TweetsTable: !Ref TweetsTable
